--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
